--- a/pagestyle.css
+++ b/pagestyle.css
@@ -54,8 +54,8 @@ body::before {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 55px;
-    background: linear-gradient(to bottom, rgba(0, 60, 0, 0.97) 20%, transparent 100%);
+    height: 80px;
+    background: linear-gradient(to bottom, rgba(0, 60, 0, 1) 50%, transparent 100%);
     z-index: 99;
     pointer-events: none;
 }
@@ -108,6 +108,8 @@ body::before {
 }
 
 .left-text {
+    position: relative;
+    z-index: 100;
     font-size: 0.75rem;
     line-height: 0.5;
     text-align: right;
@@ -140,6 +142,8 @@ body::before {
     }
 
     .left-text {
+    position: relative;
+    z-index: 100;
         display: none;
     }
 
