--- a/style.css
+++ b/style.css
@@ -71,6 +71,8 @@ a:hover {
     line-height: 0.5;
     text-align: right;
     padding-right: 30px;
+    position: relative;
+    z-index: 100;
 }
 
 .middle-box {
@@ -89,8 +91,8 @@ body::before {
     top: 0;
     left: 0;
     width: 100vw;
-    height: 55px;
-    background: linear-gradient(to bottom, rgba(0, 60, 0, 0.97) 20%, transparent 100%);
+    height: 80px;
+    background: linear-gradient(to bottom, rgba(0, 60, 0, 1) 50%, transparent 100%);
     z-index: 99;
     pointer-events: none;
 }
